--- a/env/ursa.env
+++ b/env/ursa.env
@@ -5,5 +5,6 @@ module use /contrib/spack-stack/spack-stack-1.9.1/envs/ue-oneapi-2024.2.1/instal
 module load stack-oneapi/2024.2.1
 module load stack-intel-oneapi-mpi/2021.13
 module load bufr/12.1.0
+module load w3nco/2.4.1   # Necessary for w3fs21 subroutine in metarcld.fd and lightning.fd
 module load netcdf-c/4.9.2
 module load netcdf-fortran/4.6.1
