--- a/env/ursa.env
+++ b/env/ursa.env
@@ -6,5 +6,6 @@ module load stack-oneapi/2024.2.1
 module load stack-intel-oneapi-mpi/2021.13
 module load bufr/12.1.0
 module load w3nco/2.4.1   # Necessary for w3fs21 subroutine in metarcld.fd and lightning.fd
+module load g2/3.5.1   # Necessary for read_grib2_mod.f90 in mosaic.fd
 module load netcdf-c/4.9.2
 module load netcdf-fortran/4.6.1
