Port code to Gaea C6
The following all compile successfully on Gaea:
- larccld.fd
- lightning.fd
- metarcld.fd
- mosaic.fd
- wps_map_utils

Also successfully ran mosaic.fd. Made a quick plot of the results, and
they seem to be reasonable.

--- a/env/ursa.env
+++ b/env/ursa.env
@@ -9,3 +9,6 @@ module load w3nco/2.4.1   # Necessary for w3fs21 subroutine in metarcld.fd and l
 module load g2/3.5.1   # Necessary for read_grib2_mod.f90 in mosaic.fd. Will also load bacio, libjpeg, jasper, libpng, and w3emc
 module load netcdf-c/4.9.2
 module load netcdf-fortran/4.6.1
+
+# Set fortran compiler used in Makefiles
+export FC=mpiifort
