--- a/env/hera.env
+++ b/env/hera.env
@@ -7,3 +7,6 @@ module load stack-intel-oneapi-mpi/2021.5.1
 module load netcdf-c/4.9.2
 module load netcdf-fortran/4.6.0
 module load bufr/11.7.0
+
+# Set fortran compiler used in Makefiles
+export FC=mpiifort
