Start adding code to read MPAS in cloudanalysis.fd
Current strategy is to incrementally add code to
cloudanalysis_tmp_driver.f90 until all functionality from the original
driver (cloudanalysis_fv3driver.f90) has been added.

Additional code in this commit primarily consists of subroutines to
read 1D and 2D fields from MPAS and then distribute these fields to all
the processors being used.

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,11 @@ mosaic.fd/namelist.mosaic
 mosaic.fd/namelist.mosaic_netcdf
 mosaic.fd/filelist_mrms
 lightning.fd/namelist.lightning
+cloudanalysis.fd/gsiparm.anl
 
 # Other
 *.swp
 slurm*
 *.png
 *.txt
+stdout*
