Finish code to read MPAS background in cloudanalysis.fd
Updated code compiles and runs without error. Minimum and maximum values
printed to the screen seem to be reasonable.

--- a/cloudanalysis.fd/Makefile
+++ b/cloudanalysis.fd/Makefile
@@ -4,7 +4,8 @@
 FFLAGS=-diag-disable=10448 -traceback
 
 # Components of program
-SRC=rapidrefresh_cldsurf_mod.f90 \
+SRC=pbl_height.f90 \
+    rapidrefresh_cldsurf_mod.f90 \
     namelist_mod.f90 \
     get_mpas_bk_mod.f90 \
     cloudanalysis_tmp_driver.f90
