Initial draft of map_proj_helper module code
Update code utilizes a new module for defining map projections for
larccld.fd, lightning.fd, and metarcld.fd. This code has been placed in
a separate branch because preliminary comparisons indicate that moving
the map projection definition to a separate module changes the output
(for reasons that I do not fully understand).

--- a/metarcld.fd/Makefile
+++ b/metarcld.fd/Makefile
@@ -1,8 +1,8 @@
 
 # Compiler settings
 # diag-disable=10448 flag is needed to disable warning about how ifort is deprecated
-FFLAGS=-diag-disable=10448 -traceback
-#FFLAGS=-diag-disable=10448 -traceback -g -warn all -check all
+#FFLAGS=-diag-disable=10448 -traceback
+FFLAGS=-diag-disable=10448 -traceback -g -warn all -check all
 
 # Components of program
 SRC=cld_parm_array_module.f90 \
@@ -24,7 +24,8 @@ MAP=$(map_util_dir)/misc_definitions_module.o \
     $(map_util_dir)/module_map_utils.o
 SHARE=$(share_dir)/kinds.o \
       $(share_dir)/constants.o \
-      $(share_dir)/mpasio.o
+      $(share_dir)/mpasio.o \
+      $(share_dir)/map_proj_helper_mod.o
 
 # Compile individual f90 files
 %.o: %.f90
